--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://firebasestorage.googleapis.com/v0/b/portfolio-projects-61790.appspot.com/o/Gui_logo_borda.png?alt=media&token=a43bc560-83f7-4b03-9b7f-1999a6eb7d78"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -32,7 +35,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Guilherme Lopreti Portfólio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
